Allow safe per-thread heap compaction UMA reporting.

R=haraken
BUG=704413

Review-Url: https://codereview.chromium.org/2769113003
Cr-Commit-Position: refs/heads/master@{#459024}

Former-commit-id: 430307ef971c7bb91ac0b9f6ac80e511e6418c13